--- a/src/app/shared/text-select/text-select.component.scss
+++ b/src/app/shared/text-select/text-select.component.scss
@@ -105,6 +105,9 @@
         background: #cccccc;
       }
     }
+    //&:empty::before {
+    //  content: attr(data-text);
+    //}
   }
 
   &-pagination {
