--- a/src/app/dashboard/components/category/category-list/category-list.component.html
+++ b/src/app/dashboard/components/category/category-list/category-list.component.html
@@ -1,14 +1,11 @@
 <div class="categories-main">
   <div class="header">
-    <span>
-      <small>**Click on the Add Category Button to add a Category</small>
-    </span>
+    <h2>Categories</h2>
     <button type="button" class="btn-success" (click)="openDialog(null, 'add')">Add Category</button>
   </div>
   <div class="content categories-content">
     <app-table-header [selectLabel]="'Category Status'" (statusValue)="onStatusChange($event)" (search)="search($event)"
-                      [resetStatus]="resetStatus" (pageSize)="fetchItemsPerPage($event)"
-                      [placeholder]="'Category Name...'">
+                      (pageSize)="fetchItemsPerPage($event)" [placeholder]="'Category Name...'">
     </app-table-header>
     <div class="table-wrapper">
       <table>
@@ -51,7 +48,7 @@
   </div>
   <app-dialog [extras]="{actionArea: actionArea, title: dialogTitle, loading: loading}" *ngIf="dialogService.showDialog"
               (clearDialog)="closeDialog($event)" (confirmAction)="confirmAction()">
-    <app-category-form [category]="selectedCategory" (reloadCategories)="reloadCategories()"
+    <app-category-form [category]="category" (reloadCategories)="reloadCategories()"
                        [action]="action">
     </app-category-form>
   </app-dialog>
