--- a/src/app/dashboard/components/management/member/member-list/member-list.component.html
+++ b/src/app/dashboard/components/management/member/member-list/member-list.component.html
@@ -1,14 +1,11 @@
 <div class="members-main">
   <div class="header" *ngIf="showHeader !== undefined && showHeader === true">
-    <span>
-      <small>**Click on the Add Member Button to add a Member</small>
-    </span>
+    <h2>Users</h2>
     <button type="button" class="btn-success">Add Member</button>
   </div>
   <div class="groups-content" [ngClass]="{'content' : showContentCard}">
-    <app-table-header [selectLabel]="'Member Status'" (statusValue)="onStatusChange($event)" [resetStatus]="resetStatus"
-                      (search)="performSearch($event)" (pageSize)="fetchItemsPerPage($event)"
-                      [placeholder]="'FirstName, LastName or Email...'">
+    <app-table-header [selectLabel]="'Member Status'" (statusValue)="onStatusChange($event)" (search)="search($event)"
+                      (pageSize)="fetchItemsPerPage($event)" [placeholder]="'FirstName, LastName or Email...'">
     </app-table-header>
     <div class="table-wrapper">
       <table>
