--- a/src/app/shared/table-header/table-header.component.scss
+++ b/src/app/shared/table-header/table-header.component.scss
@@ -124,10 +124,14 @@
 
   input {
     width: 100%;
-    padding: .7rem;
+    padding: .7rem 2rem;
     border-radius: 2rem;
     border: 1px solid #636363;
     color: #212529;
+
+    @media screen and (max-width: 568px){
+      padding: .7rem 1rem;
+    }
   }
 
   //form {
