--- a/src/app/dashboard/components/product/product-list/product-list.component.html
+++ b/src/app/dashboard/components/product/product-list/product-list.component.html
@@ -18,7 +18,7 @@
           <th style="text-align: center">Brand</th>
           <th style="width: 10rem; text-align: center">Initial Price</th>
           <th style="width: 10rem; text-align: center">Final Price</th>
-          <th style="text-align: center; width: 5rem">Discount</th>
+          <th style="text-align: center; width: 5rem">Discount (%)</th>
           <th>Owner</th>
           <th>Created On</th>
           <th>Actions</th>
