--- a/src/app/dashboard/components/management/member/member-group/member-group.component.scss
+++ b/src/app/dashboard/components/management/member/member-group/member-group.component.scss
@@ -1,8 +1,11 @@
 .group-area {
+  display: flex;
+  flex-direction: column;
+
   .groups-content {
-    display: flex;
-    flex-direction: column;
-    row-gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
 
     .all-groups, .user-groups {
       border: 1px solid #cccccc;
@@ -14,7 +17,13 @@
         height: 20rem;
         padding: 0 .5rem;
 
-        p {
+        .pagination-text {
+          font-style: italic;
+          text-align: center;
+          padding: .3rem;
+          font-weight: bold;
+          color: #28a745;
+          font-size: .7rem;
           margin-top: .5rem;
 
           strong {
@@ -41,7 +50,9 @@
           padding: .5rem 1rem;
 
           .group-name {
-            font-size: 1.1rem;
+            font-size: .9rem;
+            font-weight: bold;
+            text-transform: uppercase;
           }
 
           h3 {
@@ -80,7 +91,7 @@
       .header-area {
         display: flex;
         width: 100%;
-        background: #565867;
+        background: #767676;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
         padding: .8rem 2rem;
@@ -99,5 +110,14 @@
         }
       }
     }
+
+    @media screen and (max-width: 598px) {
+      grid-template-columns: 1fr;
+    }
+
+  }
+
+  .btn-primary {
+    margin-left: auto;
   }
 }
